--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
 rabbitmq.queue.name=myFirstQueue
+rabbitmq.exchange.name=myFirstExchange
