--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,6 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
 
-rabbitmq.queue.name=myFirstQueue
-rabbitmq.exchange.name=myFirstExchange
+rabbitmq.queue.name=my_first_queue
+rabbitmq.exchange.name=my_first_exchange
+rabbitmq.routing.key=my_first_routing_key
