--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.rabbitmq.password=guest
 rabbitmq.queue.name=my_first_queue
 rabbitmq.exchange.name=my_first_exchange
 rabbitmq.routing.key=my_first_routing_key
+
+rabbitmq.queue.json.name=my_json_queue
+rabbitmq.key.routing.json=my_json_routing_key
